...
import kotlin.coroutines.resume
import kotlin.coroutines.resumeWithException
import kotlinx.coroutines.suspendCancellableCoroutine
import kotlinx.serialization.json.*
import okhttp3.*

data class AppRelease(val tag: String, val notes: String) {
    val url: String get() = "https://github.com/KimmyXYC/HDUHelper/releases/tag/$tag"
}

internal data class AppVersion(val major: BigInteger, val minor: BigInteger, val patch: BigInteger) : Comparable<AppVersion> {
    override fun compareTo(other: AppVersion): Int = compareValuesBy(this, other, { it.major }, { it.minor }, { it.patch })
    companion object {
...
